fixed minor overflow problem

--- a/mediascreen.css
+++ b/mediascreen.css
@@ -74,6 +74,12 @@
   .hidden-about-content{
     display: block;
   }
+  .about-us-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
   #nav {
     visibility: visible;
   }
