--- a/nav.css
+++ b/nav.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  overflow-x: hidden;
 }
 .nav-item {
   display: flex;
